--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,8 +5,6 @@ name: \"Learn & Play\" application
 on:
   push:
     branches: ["main"]
-    tags:
-      - "v*.*.*"
 
 permissions:
   contents: read
@@ -17,7 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event for the branch ${{ github.ref }} of ${{ github.repository }}."
+      - name: Print info
+        run: echo "The job was automatically triggered by a ${{ github.event_name }} event for the branch ${{ github.ref }} of ${{ github.repository }}."
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Python 3.10
@@ -39,9 +38,18 @@ jobs:
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Build
+        run: echo ${{ github.sha }} > Release.txt
+      - name: Test
+        run: cat Release.txt
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: Release.txt
