--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,15 +18,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Build
-        run: echo ${{ github.sha }} > Release.txt
-      - name: Test
-        run: cat Release.txt
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Output Release URL File
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo "${{ steps.create_release.outputs.upload_url }}" > Release.txt
+      - name: Save Release URL File for publish
+        uses: actions/upload-artifact@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Release.txt
+          name: Release.txt
+          path: Release.txt
 
   build-package:
     name: Build Package
