--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,7 +40,7 @@ jobs:
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller app.spec --noconfirm
-            OUT_FILE_NAME: "Apprends & Joue.exe"
+            OUT_FILE_NAME: "Apprends et joue.exe"
 
     steps:
       - name: Checkout
@@ -49,7 +49,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pyinstaller
