--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,7 +40,7 @@ jobs:
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller app.spec --noconfirm
-            OUT_FILE_NAME: "Apprends et joue.exe"
+            OUT_FILE_NAME: "Apprends et Joue.exe"
 
     steps:
       - name: Checkout
@@ -66,4 +66,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ./dist/app/${{ matrix.OUT_FILE_NAME}}
+          files: ./dist/${{ matrix.OUT_FILE_NAME}}
